Fix bug with s-actors slider collapse
Also all media queries '@media screen and (max-width: ...)' is replaced
by mixin 'media-max'.

--- a/app/sass/elements/social-links.sass
+++ b/app/sass/elements/social-links.sass
@@ -17,6 +17,6 @@
   &:active
     color: $accent-light
 
-@media only screen and (max-width : $b-md)
+@include media-max($b-md)
   .social-link
     font-size: 18px
