--- a/app/sass/structure-sections/s-actors/s-actors-main.sass
+++ b/app/sass/structure-sections/s-actors/s-actors-main.sass
@@ -2,11 +2,3 @@
   @extend .container
   position: relative
   overflow: hidden
-
-.s-actors-image-container
-  max-height: $w-xl
-  max-width: $w-xl
-  width: auto
-
-.s-actors-image
-  width: 100%
